tried to fix scrolling panel in pagebuilder but no success

--- a/visualisation/pages/menu.html
+++ b/visualisation/pages/menu.html
@@ -1,5 +1,5 @@
 
-		<div id='menu' class='menupanel' data-role='panel' data-display='overlay' data-position='left' data-theme='b'>
+		<div id='menu' class='menupanel' data-role='panel' data-display='overlay' data-position='left' data-position-fixed="true" data-theme='b'>
 			<nav id="mainmenu" data-role='collapsible-set' data-corners='false' data-inset='false'>	
 			
 				<section data-role='collapsible' data-section='central' data-theme='a' data-content-theme='b'>
