changed icon location in js and html

--- a/visualisation/pages/menu.html
+++ b/visualisation/pages/menu.html
@@ -5,28 +5,28 @@
 				<section data-role='collapsible' data-section='central' data-theme='a' data-content-theme='b'>
 					<h1>Central</h1>
 					<ul data-role='listview' data-inset='false'>
-						<li><a href='#central_light'><img src='icons/ws/light_light.png'><h1>Light</h1></a></li>
-						<li><a href='#central_shading'><img src='icons/ws/fts_sunblind.png'><h1>Shading</h1></a></li>
-						<li><a href='#central_indoor'><img src='icons/ws/sani_heating.png'><h1>Indoor climate</h1></a></li>
-						<li><a href='#central_weather'><img src='icons/ws/weather_cloudy_light.png'><h1>Weather</h1></a></li>
-						<li><a href='#central_energy'><img src='icons/ws/measure_power_meter.png'><h1>Energy</h1></a></li>
+						<li><a href='#central_light'><img src='icons/ffffff/light_light.png'><h1>Light</h1></a></li>
+						<li><a href='#central_shading'><img src='icons/ffffff/fts_sunblind.png'><h1>Shading</h1></a></li>
+						<li><a href='#central_indoor'><img src='icons/ffffff/sani_heating.png'><h1>Indoor climate</h1></a></li>
+						<li><a href='#central_weather'><img src='icons/ffffff/weather_cloudy_light.png'><h1>Weather</h1></a></li>
+						<li><a href='#central_energy'><img src='icons/ffffff/measure_power_meter.png'><h1>Energy</h1></a></li>
 					</ul>
 				</section>
 
 				<section data-role='collapsible' data-section='firstfloor' data-theme='a' data-content-theme='b'>
 					<h1>First floor</h1>
 					<ul data-role='listview'>
-						<li><a href='#firstfloor_living'><img src='icons/ws/scene_livingroom.png'><h1>Living</h1></a></li>
-						<li><a href='#firstfloor_hallway'><img src='icons/ws/scene_hall.png'><h1>Hallway</h1></a></li>
+						<li><a href='#firstfloor_living'><img src='icons/ffffff/scene_livingroom.png'><h1>Living</h1></a></li>
+						<li><a href='#firstfloor_hallway'><img src='icons/ffffff/scene_hall.png'><h1>Hallway</h1></a></li>
 					</ul>
 				</section>
 				
 				<section data-role='collapsible' data-section='secondfloor' data-theme='a' data-content-theme='b'>
 					<h1>Second Floor</h1>
 					<ul data-role='listview'>
-						<li><a href='#secondfloor_stairs'><img src='icons/ws/scene_stairs.png'><h1>Stairs</h1></a></li>
-						<li><a href='#secondfloor_bathroom'><img src='icons/ws/scene_bath.png'><h1>Bathroom</h1></a></li>
-						<li><a href='#secondfloor_bedroom'><img src='icons/ws/scene_sleeping_alternat.png'><h1>Bedroom</h1></a></li>
+						<li><a href='#secondfloor_stairs'><img src='icons/ffffff/scene_stairs.png'><h1>Stairs</h1></a></li>
+						<li><a href='#secondfloor_bathroom'><img src='icons/ffffff/scene_bath.png'><h1>Bathroom</h1></a></li>
+						<li><a href='#secondfloor_bedroom'><img src='icons/ffffff/scene_sleeping_alternat.png'><h1>Bedroom</h1></a></li>
 					</ul>
 				</section>
 				
