cleaned up settings and header

--- a/visualisation/data/header.html
+++ b/visualisation/data/header.html
@@ -21,11 +21,8 @@
 				<a href='index.php' data-ajax='false' id='home'><img src='icons/ffffff/knxcontrol_home.png'></a>
 				<a href='#' id='menu_button'><img src='icons/ffffff/knxcontrol_bars.png'></a>
 				<div class='home'>
-					<a class='hide' href='#home_users'><img src='icons/ffffff/knxcontrol_users.png'></a>
-					<a class='hide' href='#home_alarms'><img src='icons/ffffff/knxcontrol_alarm.png'></a>
-					<a class='hide' href='#home_measurements'><img src='icons/ffffff/measure_power_meter.png'></a>
-					<a class='hide' href='#home_settings'><img src='icons/ffffff/knxcontrol_gears.png'></a>
-					<a class='hide' href='#home_pagebuilder'><img src='icons/ffffff/pagebuilder_pagebuilder.png'></a>
+					<a href='#home_settings'><img src='icons/ffffff/knxcontrol_gears.png'></a>
+					<a href='#home_pagebuilder'><img src='icons/ffffff/pagebuilder_pagebuilder.png'></a>
 					<a href='index.php?logout=1' data-ajax='false'><img src='icons/ffffff/knxcontrol_logout.png'></a>
 				</div>	
 				<div class='pagebuilder'>
