changed javascript control handling

--- a/www/data/header.html
+++ b/www/data/header.html
@@ -18,12 +18,12 @@
 
 		<div id='header' data-role='header' data-position='fixed' data-tap-toggle='false' data-theme='b'>
 			<nav>
-				<a href='index.php' data-ajax='false' id='home'><img src='icons/ffffff/knxcontrol_home.png'></a>
+				<a href='#home_home' id='home'><img src='icons/ffffff/knxcontrol_home.png'></a>
 				<a href='#' id='menu_button'><img src='icons/ffffff/knxcontrol_bars.png'></a>
 				<div class='home'>
 					<a href='#home_settings'><img src='icons/ffffff/knxcontrol_gears.png'></a>
 					<a href='#home_pagebuilder'><img src='icons/ffffff/pagebuilder_pagebuilder.png'></a>
-					<a href='index.php?logout=1' data-ajax='false'><img src='icons/ffffff/knxcontrol_logout.png'></a>
+					<a href='#login'><img src='icons/ffffff/knxcontrol_logout.png'></a>
 				</div>	
 				<div class='pagebuilder'>
 					<a class='publish' href='#'><img src='icons/ffffff/pagebuilder_publish.png'></a>
