--- a/www/elements/paper-header-panel-drawer/paper-header-panel-drawer.html
+++ b/www/elements/paper-header-panel-drawer/paper-header-panel-drawer.html
@@ -8,6 +8,7 @@
 			:host{
 				width: 100%;
 				height: 100%;
+				background-color: #252525;
 			}
 			.header{
 				position: fixed;
@@ -19,7 +20,9 @@
 				width: 100%;
 				height: 60px;
 
-				background-color: #222;
+				background-color: #1d1d1d;
+				border-bottom: solid 1px;
+				border-color: #1b1b1b;
 				z-index: 10;
 			}
 			.content{
@@ -35,7 +38,7 @@
 				bottom: 0;
 			}
 			.drawer{
-				background-color: #888;
+				background-color: #2a2a2a;
 				overflow: scroll;
 			}
 			.main{
