--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -26,7 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
 <!-- Configure your routes here -->
-<link rel="import" href="routing.html">
+<!--<link rel="import" href="routing.html">-->
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
@@ -34,3 +34,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../elements/paper-header-panel-drawer/paper-header-panel-drawer.html">
 
+<link rel="import" href="../elements/homecon-menu/homecon-menu.html">
+<link rel="import" href="../elements/homecon-menu-section/homecon-menu-section.html">
+<link rel="import" href="../elements/homecon-menu-item/homecon-menu-item.html">
