--- a/www/elements/paper-header-panel-drawer/paper-header-panel-drawer.html
+++ b/www/elements/paper-header-panel-drawer/paper-header-panel-drawer.html
@@ -37,7 +37,6 @@
 				right: 0;
 				bottom: 0;
 			}
-			
 			.drawer{
 				background-color: #2a2a2a;
 				overflow: hidden;
@@ -69,7 +68,7 @@
 			<content select=".header"></content>
 		</div>
 		<div class="content">
-		    <paper-drawer-panel id="drawerPanel">
+		    <paper-drawer-panel id="drawerPanel" responsive-width="800px" drawer-width="380px">
       			<div drawer class="drawer">
 					<div class="drawer-content">
 						<content select=".drawer"></content>
