--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -37,3 +37,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../elements/homecon-menu/homecon-menu.html">
 <link rel="import" href="../elements/homecon-menu-section/homecon-menu-section.html">
 <link rel="import" href="../elements/homecon-menu-item/homecon-menu-item.html">
+<link rel="import" href="../elements/homecon-page/homecon-page.html">
