added icons in the header bar for home and settings

--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -34,6 +34,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../elements/paper-header-panel-drawer/paper-header-panel-drawer.html">
 
+<link rel="import" href="../elements/homecon-header-item/homecon-header-item.html">
 <link rel="import" href="../elements/homecon-menu/homecon-menu.html">
 <link rel="import" href="../elements/homecon-menu-section/homecon-menu-section.html">
 <link rel="import" href="../elements/homecon-menu-item/homecon-menu-item.html">
