--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
 				<div class="header">
 					<homecon-header-item pageid="home" icon="homecon_home"></homecon-header-item>
 					<homecon-header-item pageid="settings" icon="homecon_gears"></homecon-header-item>
+					<homecon-header-item pageid="logout" icon="homecon_logout"></homecon-header-item>
 				</div>
 				<div class="drawer">
 					<homecon-menu>
