--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
 						</div>
 						<div pageid="settings">
 							<homecon-page-header title="Settings" icon="homecon_gears"></homecon-page-header>
-		
+							<paper-button noink="true">Edit mode</paper-button>
 						</div>
 						<template is="dom-repeat" items="{{pages.sections}}" as="section">
 							<template is="dom-repeat" items="{{section.pages}}" as="page">
