--- a/www/elements/homecon-menu-item/homecon-menu-item.html
+++ b/www/elements/homecon-menu-item/homecon-menu-item.html
@@ -28,6 +28,7 @@
 				height: 100%;
 			}
 			a.item .title{
+				display: inline-block;
 				font-size: 18px;
 				font-family: sans-serif;
 				font-weight: 700;
