added page creation in menu and icon selection element

--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -39,3 +39,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../elements/homecon-menu/homecon-menu.html">
 <link rel="import" href="../elements/homecon-page/homecon-page.html">
 <link rel="import" href="../elements/homecon-settings/homecon-settings.html">
+<link rel="import" href="../elements/homecon-pages/homecon-pages.html">
