--- a/www/index.html
+++ b/www/index.html
@@ -77,14 +77,13 @@
 				</div>
 			</paper-header-panel-drawer>
 
-
-
 			<paper-toast id="toast">
 				<span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">close</span>
 			</paper-toast>
 
+			<homecon-pages pages="{{pages}}"></homecon-pages>
 		</template>
-
+		
 		<script src="scripts/app.js"></script>
 	</body>
 
