--- a/www/elements/homecon-menu-section/homecon-menu-section.html
+++ b/www/elements/homecon-menu-section/homecon-menu-section.html
@@ -3,13 +3,10 @@
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
-<link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
-<link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
-<link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
+<link rel="import" href="../../elements/homecon-edit-dialog/homecon-edit-dialog.html">
 
 
 
@@ -24,7 +21,7 @@
 			a.header{
 				display: block;
 				cursor: pointer;
-
+				min-height: 16px;
 				padding: 12px 12px 12px 40px;
 
 				background-color: #ffffff;
@@ -53,30 +50,28 @@
 		</style>
 		
 		<a class="header" on-click="changeState">			
-			{{title}}
+			{{section.title}}
 		</a>
-		<template is="dom-if" if="{{edit}}">
-			<paper-icon-button class="edit" icon="editor:mode-edit" noink="true" on-click="openEditDialog"></paper-icon-button>
-		</template>
+
+		<paper-icon-button class="edit" icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
 
 		<iron-collapse opened="{{opened}}">
 			<content></content>
 		</iron-collapse>
-		
-		<paper-dialog id="editDialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop="true">
-			<form>
-				<paper-input label="Title:" value="{{title}}"></paper-input>
-				<paper-button>save</paper-button>
-			</form>
-		</paper-dialog>	
+
+
+		<homecon-edit-dialog id="editDialog" on-save="save">
+			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
+		</homecon-edit-dialog>
+
 
 	</template>
 	<script>
 		Polymer({
 			is: 'homecon-menu-section',
 			properties: {
-				title: {
-					type: 'String',
+				section: {
+					type: 'Object',
 				},
 				opened: {
 					type: 'Boolean',
@@ -99,8 +94,13 @@
 				}
 			},
 			openEditDialog: function(){
-				this.$.editDialog.open()
-			}
+				this.set('newTitle',this.section.title);
+				this.$.editDialog.open();
+			},
+			save: function(){
+				this.set('section.title',this.newTitle);
+				this.$.editDialog.close();
+			},
 		});
 	</script>
 </dom-module>
